Fixed popup image bug on iphone

--- a/resources/scss/popup.scss
+++ b/resources/scss/popup.scss
@@ -382,7 +382,7 @@
  .popup__img-body-icon{
   width: 100%;
   height: 100%;
-  background-image: url("https://colorit.artgas.pro/build/assets/1_-20b5adf0.webp");
+  background-image: url("../../public/img/popup/es/1_.webp");
   background-repeat: no-repeat;
   background-size: cover;
   &.disabled{
